# ragmail

./: README.md  ai-state.md
.agents/skills/ragmail/: SKILL.md
.agents/skills/ragmail/scripts/: ragmail_query.py
docs/: developers.md  windows.md
python/: pyproject.toml
python/lib/ragmail/ingest/: validation.py
