[project]
name = "ragmail"
version = "0.1.0"
description = "Unified email cleaning, ingestion, and search toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "chardet>=5.2.0",
    "lancedb==0.30.0",
    "pylance>=0.20.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.41.0,<4.48.0",
    "torch>=2.0.0",
    "spacy>=3.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "tantivy>=0.22.0",
    "einops>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "pyinstaller>=6.11.0",
]

[project.scripts]
ragmail-py = "ragmail.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/ragmail"]
